[gd_scene load_steps=2 format=3 uid="uid://bv7hpndu8mxs1"]

[ext_resource type="Script" path="res://scripts/Inventory.gd" id="1_script"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 0.9)

[node name="MainPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 650)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -325.0
offset_right = 450.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 32
text = "INVENTORY"
horizontal_alignment = 1

[node name="InfoPanel" type="Panel" parent="MainPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -250.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 130.0
grow_horizontal = 0

[node name="InfoLabel" type="Label" parent="MainPanel/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory: 0/20"
horizontal_alignment = 1

[node name="CategoryTabs" type="HBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 70.0
offset_right = 340.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -250.0
offset_right = 420.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 1

[node name="GridContainer" type="GridContainer" parent="MainPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 8

[node name="BackButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0
text = "BACK"

